[project]
name = "trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.5.0",
    "hf>=1.1.0",
    "maze-dataset==1.3.0",
    "peft>=0.19.1",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "trl>=1.4.0",
    "vllm>=0.15.0",
]

